<resources>
    <string name="app_name">bestbank</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Overview</string>
    <string name="tab_text_2">History</string>
    <string name="tab_text_3">Tab 2</string>
    <string name="tab_text_4">Tab 2</string>
    <string name="tab_text_5">Tab 2</string>
    <string name="currency"><sup>$</sup></string>
    
    //Account details
    <string name="identity_number">Identity Number</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birth_date">Date of birth</string>
    <string name="area_code">Area Code</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="text_register">Register</string>
    <string name="text_login">Login</string>
    <string name="mr">Mr.</string>
    <string name="mrs">Mrs.</string>
    <string name="account_details">Account details</string>
    <string name="account_name">Account name:</string>
    <string name="account_type">Account type:</string>
    <string name="account_number">Account number:</string>
    <string name="lastSuccessfulLogin">Last successful login:</string>
    <string name="default_notification_channel_id">bestbank_channel</string>
    <string name="default_notification_channel_name">bestbank_channel</string>

</resources>
